# Scientific-Computation

./: README.md
hw10/: CMakeLists.txt  zeroclassimp.cpp  zeroclasslib.hpp  zeroclasstest.cpp
hw11/: CMakeLists.txt  newton-complex.cpp  newton-root.cpp
hw12/: CMakeLists.txt  abctuple.cpp
hw13/: CMakeLists.txt  matvec.cpp
hw2/: #fizzbuzz.cpp#  a.out  fizzbuzz.cpp
hw3/: looping.cpp  loopingsequence.cpp
hw4/: CMakeLists.txt  newton-lambda.cpp
hw5/: CMakeLists.txt  fizzbuzz_unix.cpp  script.sh
hw6/: CMakeLists.txt  perfectnum.cpp
hw7/: CMakeLists.txt  halfway.cpp
hw8/: CMakeLists.txt  Pascal.cpp
hw9/: CMakeLists.txt  linkedlist.cpp
project/: CMakeLists.txt  infect_lib.cc  sim1.cpp  sim2.cpp  sim3.cpp  sim4.cpp  sim5.cpp  sim6.cpp
src/: infect_lib.cc  newton.cpp  sim1.cpp  sim4.cpp  sim5.cpp  sim6.cpp
testcode/: a.out  infect_lib.cc  personclass.cpp  sim1.cpp  sim2.cpp  sim3.cpp  sim4.cpp  sim5.cpp  sim6.cpp
